Github link added

--- a/www/index.html
+++ b/www/index.html
@@ -286,7 +286,8 @@ $(document).ready( displayWheel );
      <b><em>Wheel of Names</em>: &nbsp;&nbsp;&nbsp;
       <a href="#" onclick="wheelRestart();">Restart</a>&nbsp;&nbsp;&nbsp;
       <a href="#" onclick="wheelClear();">New</a>&nbsp;&nbsp;&nbsp;
-      <a href="help.html">Help</a>
+      <a href="help.html">Help</a>&nbsp;&nbsp;&nbsp;
+      <a href="https://github.com/mitotic/WheelOfNames">Github</a>
      </b>
     <p>
     <b id="header">Session <span id="sessionid"></span> started on <em id="sessiontime"></em>
