--- a/www/help.html
+++ b/www/help.html
@@ -16,17 +16,18 @@ replacement of names).
 selected, a dialog box will appear. Clicking <em>OK</em> will remove the
 selected name from the list, clicking <em>Cancel</em> will retain the name.
 
-<p>
-<b>Setup</b>: To populate the list, simply link to this site using an URL of the form:
-<br>
-<tt><a href="http://pyintro.org/wheel/?session=web101&names=John+Smith;Jane+Doe;Gilgamesh">http://pyintro.org/wheel/?names=John+Smith;Jane+Doe;Gilgamesh</a></tt>
-<br>
-with names separated by semicolons, with any spaces in the names replaced
-with plus (+) signs. Alternatively, the list of semicolon-separated
-names may be entered manually via a dialog box. The optional
-<tt>session</tt> parameter enables multiple parallel sessions.
-Another optional parameter <tt>max</tt> may be used to specify
-the maximum number of names displayed for the final cut (default: 30).
+<p> <b>Setup</b>: To populate the list, simply link to this site using
+an URL of the form:
+<br> <tt><a
+href="http://pyintro.org/wheel/?session=web101&names=John+Smith;Jane+Doe;Gilgamesh">http://pyintro.org/wheel/?names=John+Smith;Jane+Doe;Gilgamesh</a></tt>
+<br>with names separated by semicolons, with any spaces in the names
+replaced with plus (+) signs. The URL may be stored in a file and
+reused to restart a session. Alternatively, the list of
+semicolon-separated names may be entered manually via a dialog
+box. The optional <tt>session</tt> parameter enables multiple parallel
+sessions.  Another optional parameter <tt>max</tt> may be used to
+specify the maximum number of names displayed for the final cut
+(default: 30).
 
 <p>
 <b>Sessions</b>: A sequence of spins starting with a new list of
