--- a/www/help.html
+++ b/www/help.html
@@ -19,12 +19,13 @@ selected name from the list, clicking <em>Cancel</em> will retain the name.
 <p> <b>Setup</b>: To populate the list, simply link to this site using
 an URL of the form:
 <br> <tt><a
-href="http://pyintro.org/wheel/?session=web101&names=John+Smith;Jane+Doe;Gilgamesh">http://pyintro.org/wheel/?names=John+Smith;Jane+Doe;Gilgamesh</a></tt>
+href="http://pyintro.org/wheel/?session=math101&names=John+Smith;Jane+Doe;Gilgamesh">http://pyintro.org/wheel/?session=math101&names=John+Smith;Jane+Doe;Gilgamesh</a></tt>
 <br>with names separated by semicolons, with any spaces in the names
 replaced with plus (+) signs. The URL may be stored in a file and
 reused to restart a session. Alternatively, the list of
 semicolon-separated names may be entered manually via a dialog
-box. The optional <tt>session</tt> parameter enables multiple parallel
+box at <a href="http://pyintro.org/wheel">pyintro.org/wheel</a>.
+The optional <tt>session</tt> parameter enables multiple parallel
 sessions.  Another optional parameter <tt>max</tt> may be used to
 specify the maximum number of names displayed for the final cut
 (default: 30).
