--- a/www/index.html
+++ b/www/index.html
@@ -279,19 +279,21 @@ function displayWheel() {
 $(document).ready( displayWheel );
 
 	</script>
-	<title></title>
+<style>
+body { font-family:helvetica,sans-serif }
+</style>
 </head>
 <body>
 
-     <b><em>Wheel of Names</em>: &nbsp;&nbsp;&nbsp;
+      <b>Wheel of Names</b> &nbsp;&nbsp;&nbsp;
       <a href="#" onclick="wheelRestart();">Restart</a>&nbsp;&nbsp;&nbsp;
       <a href="#" onclick="wheelClear();">New</a>&nbsp;&nbsp;&nbsp;
       <a href="help.html">Help</a>&nbsp;&nbsp;&nbsp;
       <a href="https://github.com/mitotic/WheelOfNames">Github</a>
-     </b>
+     
     <p>
-    <b id="header">Session <span id="sessionid"></span> started on <em id="sessiontime"></em>
-    </b>
+    <span id="header">Session <b id="sessionid"></b> started on <em id="sessiontime"></em>
+    </span>
     <h3><em id="sessionrange"></em>
     </h3>
     <p>
