Renamed to spinwheel

--- a/www/help.html
+++ b/www/help.html
@@ -4,9 +4,9 @@
 </head>
 
 <body>
-<h1>Wheel Of Names</h1>
+<h1>SpinWheel</h1>
 
-The Wheel Of Names uses a spinning "prize wheel" image (+sound) to
+SpinWheel uses a spinning "prize wheel" image (+sound) to
 select a name from a list. This can be used to randomly select
 students in a classroom to answer questions (with or without
 replacement of names).
