--- a/www/index.html
+++ b/www/index.html
@@ -223,7 +223,7 @@ function displayWheel() {
     if (!curNames || !curNames.length)
        return;
 
-    $(document).attr('title', 'Wheel of Names: '+sessionID);
+    $(document).attr('title', 'SpinWheel: '+sessionID);
     $("#sessionid").text(sessionID);
     $("#sessiontitle").text(sessionID);
     $("#sessiontime").text(sessionTime);
@@ -285,11 +285,11 @@ body { font-family:helvetica,sans-serif }
 </head>
 <body>
 
-      <b>Wheel of Names</b> &nbsp;&nbsp;&nbsp;
+      <b>SpinWheel</b> &nbsp;&nbsp;&nbsp;
       <a href="#" onclick="wheelRestart();">Restart</a>&nbsp;&nbsp;&nbsp;
       <a href="#" onclick="wheelClear();">New</a>&nbsp;&nbsp;&nbsp;
       <a href="help.html">Help</a>&nbsp;&nbsp;&nbsp;
-      <a href="https://github.com/mitotic/WheelOfNames">Github</a>
+      <a href="https://github.com/mitotic/spinwheel">Github</a>
      
     <p>
     <span id="header">Session <b id="sessionid"></b> started on <em id="sessiontime"></em>
