--- a/www/help.html
+++ b/www/help.html
@@ -6,40 +6,71 @@
 <body>
 <h1>SpinWheel</h1>
 
-SpinWheel uses a spinning "prize wheel" image (+sound) to
-select a name from a list. This can be used to randomly select
-students in a classroom to answer questions (with or without
-replacement of names).
+A common problem in teaching is that if you pose a question to a
+class, the same few students, usually in the first row, answer
+them. These students are typically not representative of the class,
+being more advanced and also paying attention. To get around this problem,
+SpinWheel uses a spinning "prize wheel" image (+sound) to randomly
+select a name from a list. Once a name is selected, it is removed from
+the list (although this behavior can be suppressed).
+
+<p>
+
+<b>Setup</b>: Create a list of names from the class roster (usually a
+spreadsheet). You can use full names, or an abbreviated form, such as
+first name plus the inital of last name. Join the names together, with
+a comma or a semicolon as the separator, replacing any spaces in the
+names with plus (+) signs. Then generate a URL string that looks like this:
+<br> <tt><a
+href="http://pyintro.org/wheel/?session=math101&names=John+Smith;Jane+Doe;Gilgamesh">http://pyintro.org/wheel/?session=math101&names=John+Smith;Jane+Doe;Gilgamesh</a></tt>
+
+<p>The above URL can be stored in a file and reused to restart a
+session, as needed. Note that the query symbol (<tt>?</tt>) denotes the start of
+the parameter list and the ampersand (<tt>&amp;</tt>) separates
+different parameters. The optional <tt>session</tt> parameter enables
+multiple parallel sessions. Another optional parameter <tt>max</tt>
+may be used to specify the maximum number of names displayed (default:
+30). If there are more names than this maximum, a random subset of
+names is created and displayed. If the <tt>names</tt> parameter is
+omitted, the list of comma- or semicolon-separated names should be
+entered manually via a dialog box.
 
 <p>
 <b>Usage</b>: Click on SPIN to rotate the wheel. When a name is
 selected, a dialog box will appear. Clicking <em>OK</em> will remove the
 selected name from the list, clicking <em>Cancel</em> will retain the name.
 
-<p> <b>Setup</b>: To populate the list, simply link to this site using
-an URL of the form:
-<br> <tt><a
-href="http://pyintro.org/wheel/?session=math101&names=John+Smith;Jane+Doe;Gilgamesh">http://pyintro.org/wheel/?session=math101&names=John+Smith;Jane+Doe;Gilgamesh</a></tt>
-<br>with names separated by semicolons, with any spaces in the names
-replaced with plus (+) signs. The URL may be stored in a file and
-reused to restart a session. Alternatively, the list of
-semicolon-separated names may be entered manually via a dialog
-box at <a href="http://pyintro.org/wheel">pyintro.org/wheel</a>.
-The optional <tt>session</tt> parameter enables multiple parallel
-sessions.  Another optional parameter <tt>max</tt> may be used to
-specify the maximum number of names displayed for the final cut
-(default: 30).
+<p> <b>Sessions</b>: A sequence of spins starting with a new list of
+names is referred to as a <em>session</em>. The default session has a
+blank name. Alternate session names are specified using the optional
+<tt>session</tt> parameter in the URL and persist indefinitely in the
+browser (using information stored in browser local
+storage). <em>Restarting</em> a session will restore the original list
+of names. <em>Clearing</em> a session will open a dialog box to enter
+a new list of names.
 
 <p>
-<b>Sessions</b>: A sequence of spins starting with a new list of
-names is referred to as a <em>session</em>. Sessions persist
-indefinitely in the browser (using information stored in browser
-local storage). <em>Restarting</em> a session will restore the original
-list. <em>Clearing</em> a session will open a dialog box to enter a
-new list of names.
+<b>Sample URLs</b>:<br>
+<tt><a
+href="http://pyintro.org/wheel/">http://pyintro.org/wheel/</a></tt>
+<em>Enter names via dialog box for default session</em>
+<br>
+<tt><a
+href="http://pyintro.org/wheel/?names=John+Smith,Jane+Doe">http://pyintro.org/wheel/?names=John+Smith,Jane+Doe</a></tt>
+<em>Default session, comma-separated names</em>
+<br>
+<tt><a
+href="http://pyintro.org/wheel/?session=calc101&max=15&names=John+Smith,
+jr.;Jane+Doe">http://pyintro.org/wheel/?session=calc101&names=John+Smith,jr.;Jane+Doe</a></tt>
+<em>Named session, semicolon-separated names, max. display of 15 names</em>
 
-<p>
-<b>Code</b>: This implementation is based mostly on the jQuery <a
-href="https://github.com/JavoByte/rouletteWheel">rouletteWheel</a> code.
+<p> <b>Code</b>: The source code is available on <a
+href="https://github.com/mitotic/spinwheel">Github</a>. To customize
+it, modify the <tt>www/index.html</tt> file and install in your own
+web site. (An undocumented option <tt>stats=1</tt> can be specified to
+verify the randomness of the selection algorithm.) This implementation
+is based mostly on the jQuery <a
+href="https://github.com/JavoByte/rouletteWheel">rouletteWheel</a>
+code.
 
 </body> </html>
