--- a/www/help.html
+++ b/www/help.html
@@ -65,7 +65,7 @@ href="http://pyintro.org/wheel/?names=JohnS,JaneD">http://pyintro.org/wheel/?nam
 <br>
 <tt><a
 href="http://pyintro.org/wheel/?session=calc101&max=15&names=John+Smith,
-jr.;Jane+Doe">http://pyintro.org/wheel/?session=calc101&names=John+Smith,jr.;Jane+Doe</a></tt>
+jr.;Jane+Doe">http://pyintro.org/wheel/?session=calc101&max=15&names=John+Smith,jr.;Jane+Doe</a></tt>
 <em>Named session, semicolon-separated names, max. display of 15 names</em>
 
 <p> <b>Code</b>: The source code is available on <a
