--- a/www/index.html
+++ b/www/index.html
@@ -359,7 +359,7 @@ $(document).ready( displayWheel );
 
 	</script>
 <style>
-body { font-family:helvetica,sans-serif }
+body { font-family: arial, helvetica, sans-serif; }
 </style>
 </head>
 <body>
