--- a/www/help.html
+++ b/www/help.html
@@ -1,6 +1,12 @@
 <!DOCTYPE HTML PUBLIC "-//IETF//DTD HTML//EN">
 <html> <head>
-<title></title>
+<title>SpinWheel Help</title>
+<style>
+body { font-family:'Helvetica Neue', Helvetica, 'Segoe UI', Arial, freesans, sans-serif;
+font-size: 16px;
+line-height: 25.6px;
+ }
+</style>
 </head>
 
 <body>
