--- a/www/help.html
+++ b/www/help.html
@@ -3,8 +3,8 @@
 <title>SpinWheel Help</title>
 <style>
 body { font-family:'Helvetica Neue', Helvetica, 'Segoe UI', Arial, freesans, sans-serif;
-font-size: 16px;
-line-height: 22px;
+line-height: 1.35;
+max-width: 960px;
  }
 </style>
 </head>
