--- a/www/help.html
+++ b/www/help.html
@@ -1,6 +1,6 @@
 <!DOCTYPE HTML PUBLIC "-//IETF//DTD HTML//EN">
 <html> <head>
-<title>SpinWheel Help</title>
+<title>Qwheel Help</title>
 <style>
 body { font-family:'Helvetica Neue', Helvetica, 'Segoe UI', Arial, freesans, sans-serif;
 line-height: 1.35;
@@ -10,16 +10,16 @@ max-width: 960px;
 </head>
 
 <body>
-<h1>SpinWheel</h1>
+<h1>Qwheel: Question Wheel</h1>
 
 A common problem facing teachers is that if you pose a question to a
 class, the same few students, usually in the first row, answer
 them. These students are typically not representative of the class,
 being more advanced and also paying attention. To get around this
-problem, SpinWheel uses a spinning "prize wheel" image (+sound) to
+problem, Qwheel uses a spinning "prize wheel" image (+sound) to
 randomly select a name from a list. Once a name is selected, it is
 removed from the list (although this behavior can be
-suppressed). Using SpinWheel is a great way to fairly distribute
+suppressed). Using Qwheel is a great way to fairly distribute
 questions in the class and also get to know the names of your
 students.
 
@@ -78,9 +78,9 @@ jr.;Jane+Doe">http://pyintro.org/wheel/?session=calc101&max=15&names=John+Smith,
 <em>Named session, semicolon-separated names, max. display of 15 names</em>
 
 <p> <b>Code</b>: The source code is available on <a
-href="https://github.com/mitotic/spinwheel">Github</a>. You can
+href="https://github.com/mitotic/Qwheel">Github</a>. You can
 download the code and open the <tt>www/index.html</tt> in your browser
-to run SpinWheel locally, even without an internet connection, by appending
+to run Qwheel locally, even without an internet connection, by appending
 parameters to the file URL (<tt>.../index.html?names=...</tt>). To
 customize, modify the <tt>www/index.html</tt> file.  
 This implementation uses the jQuery
