--- a/www/help.html
+++ b/www/help.html
@@ -15,69 +15,87 @@ max-width: 960px;
 A common problem facing teachers is that if you pose a question to a
 class, the same few students, usually in the first row, answer
 them. These students are typically not representative of the class,
-being more advanced and also paying attention. To get around this
+being more advanced and/or paying attention. To get around this
 problem, Qwheel uses a spinning "prize wheel" image (+sound) to
 randomly select a name from a list. Once a name is selected, it is
 removed from the list (although this behavior can be
 suppressed). Using Qwheel is a great way to fairly distribute
-questions in the class and also get to know the names of your
-students.
+questions in the class, get to know the names of your
+students, and keep them attentive.
 
-<p>
+<p></p>
 
 <b>Setup</b>: No accounts or logins required! Create a list of names
-from the class roster (usually a spreadsheet). You can use full names,
-or an abbreviated form, such as first name plus the inital of last
-name. Join the names together, with a comma or a semicolon as the
-separator, replacing any spaces in the names with plus (+) signs. Then
-generate a URL string that looks like this: <br> <tt><a
-href="http://pyintro.org/wheel/?session=math101&names=John+Smith;Jane+Doe;Gilgamesh">http://pyintro.org/wheel/?session=math101&names=John+Smith;Jane+Doe;Gilgamesh</a></tt>
+from the class roster. You can use full names, or an abbreviated form,
+such as first name plus enough letters from the last name to make it
+unique, e.g., <tt>JaneDo; JohnS</tt>. Names in the list may be
+separated by line-breaks, semicolons, commas or spaces. You can create a
+line-break-separated list of names by simply copying from an Excel
+spreadsheet column, or from a file with a name in each line, and
+pasting it into the dialog box when requested. The <em>Export</em>
+option in the drop-down menu may be used to generate an URL that can
+be copied to re-create the name list in a different browser. (To use
+Qwheel without accessing the web, see <em>Code</em> info below.)
 
-<p>The above URL can be stored in a file and reused to restart a
-session, as needed. Note that the query symbol (<tt>?</tt>) denotes
-the start of the parameter list and the ampersand (<tt>&amp;</tt>)
-separates different parameters. The optional <tt>session</tt>
-parameter enables multiple parallel sessions. Another optional
-parameter <tt>max</tt> may be used to specify the maximum number of
-names displayed (default: 30). If there are more names than this
-maximum, a random subset of consecutive names from the list is
-pre-selected and displayed in the wheel. If the <tt>names</tt>
-parameter is omitted, the list of comma- or semicolon-separated names
-should be entered manually via a dialog box.
+<p></p>
 
-<p>
 <b>Usage</b>: Click on SPIN to rotate the wheel. When a name is
 selected, a dialog box will appear. Clicking <em>OK</em> will remove the
 selected name from the list, clicking <em>Cancel</em> will retain the name.
 
-<p> <b>Sessions</b>: A sequence of spins starting with a new list of
-names is referred to as a <em>session</em>. The default session has a
-blank name. Alternate session names are specified using the optional
+<p></p>
+
+<b>Sessions</b>: A sequence of spins starting with a new list of names
+is referred to as a <em>session</em>. The default session has a blank
+name. Alternate session names are specified using the optional
 <tt>session</tt> parameter in the URL and persist indefinitely in the
-browser (using information stored in browser local storage). The
-<em>drop down</em> menu may be used to switch between sessions or
+browser (using information stored in browser's offline local
+storage). The drop-down menu may be used to switch between sessions or
 create a new session. <em>Restarting</em> a session will restore the
 original list of names. <em>Deleting</em> a session will erase it from
 the browser. (Deleting the default session will re-create it.)
 <em>Exporting</em> a session displays an URL that can be copied and
 pasted in a different browser.
 
-<p>
+<p></p>
+
+<b>Creating URLs</b>: As an alternative to copying/pasting names, you
+can generate a permanent URL for creating a new session. Start with a
+list of semicolon- or comma-separated names. If there are any spaces
+within names, replace them with plus (+) signs. Then generate a URL
+string that looks like this: <br> <tt><a
+href="http://code.mitotic.org/wheel/?session=math101&names=Jane+Doe;John+Doe;John+Smith">http://code.mitotic.org/wheel/?session=math101&names=Jane+Doe;John+Doe;John+Smith</a></tt>
+
+This URL can be stored in a file and reused to restart a session, as
+needed. Note that the query symbol (<tt>?</tt>) denotes the start of
+the parameter list and the ampersand (<tt>&amp;</tt>) separates
+different parameters. The optional <tt>session</tt> parameter enables
+multiple parallel sessions. Another optional parameter <tt>max</tt>
+may be used to specify the maximum number of names displayed (default:
+30). If there are more names than this maximum, a random subset of
+consecutive names from the list is pre-selected and displayed in the
+wheel. If the <tt>names</tt> parameter is omitted, the list of names
+can be entered manually via a dialog box.
+
+<p></p>
+
 <b>Sample URLs</b>:<br>
 <tt><a
-href="http://pyintro.org/wheel/">http://pyintro.org/wheel/</a></tt>
+href="http://code.mitotic.org/wheel/">http://code.mitotic.org/wheel/</a></tt>
 <em>Enter names via dialog box for default session</em>
 <br>
 <tt><a
-href="http://pyintro.org/wheel/?names=JohnS,JaneD">http://pyintro.org/wheel/?names=JohnS,JaneD</a></tt>
+href="http://code.mitotic.org/wheel/?names=JohnS,JaneD">http://code.mitotic.org/wheel/?names=JohnS,JaneD</a></tt>
 <em>Default session, comma-separated first names+last initials</em>
 <br>
 <tt><a
-href="http://pyintro.org/wheel/?session=calc101&max=15&names=John+Smith,
-jr.;Jane+Doe">http://pyintro.org/wheel/?session=calc101&max=15&names=John+Smith,jr.;Jane+Doe</a></tt>
+href="http://code.mitotic.org/wheel/?session=calc101&max=15&names=John+Smith,
+jr.;Jane+Doe">http://code.mitotic.org/wheel/?session=calc101&max=15&names=John+Smith,jr.;Jane+Doe</a></tt>
 <em>Named session, semicolon-separated names, max. display of 15 names</em>
 
-<p> <b>Code</b>: The source code is available on <a
+<p></p>
+
+<b>Code</b>: The source code is available on <a
 href="https://github.com/mitotic/Qwheel">Github</a>. You can
 download the code and open the <tt>www/index.html</tt> in your browser
 to run Qwheel locally, even without an internet connection, by appending
@@ -87,7 +105,9 @@ This implementation uses the jQuery
 <a href="https://github.com/JavoByte/rouletteWheel">rouletteWheel</a>
 code.
 
-<p> <b>Notes:</b>
+<p></p>
+
+<b>Notes:</b>
 <ol>
 <li>Reloading the page helps if the wheel does not appear. 
 </li>
@@ -96,7 +116,7 @@ shortened to about 10 characters each, a maximum of about 200 names
 can be handled in the URL. For a longer list, pasting into the dialog
 box should work.
 </li>
-<li>An undocumented option <tt>stats=1</tt> can be specified to verify 
+<li>An undocumented parameter <tt>stats=1</tt> can be specified to verify 
 the randomness of the selection algorithm. 
 </li>
 </ol>
